--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
         <version>2.0.12</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>2.0.12</version>
+    </dependency>
+
+
       <!-- https://mvnrepository.com/artifact/com.sparkjava/spark-core -->
       <dependency>
           <groupId>com.sparkjava</groupId>
